# PhD_Positions

./: README.md  execute_scrapers.py  pyproject.toml  requirements.txt  scraper_CH_ethz.py  scraper_CH_unibas.py  scraper_CH_unil.py  scraper_CH_uzh.py  scraper_NO_nbnu.py  scraper_NO_nord.py  scraper_NO_ntnu.py  scraper_NO_uib.py  scraper_NO_uio.py  streamlit.py
data/: phd_jobs_in_schengen.db
db/: phd_jobs_in_schengen.db  process_db_tables.py  utils_processing.py
inputs/: pages_meta.json
scrapers/: scraper_CH_ethz.py  scraper_CH_unibas.py  scraper_CH_unibe.py  scraper_CH_unil.py  scraper_CH_uzh.py  scraper_NO_nmbu.py  scraper_NO_nord.py  scraper_NO_ntnu.py  scraper_NO_uib.py  scraper_NO_uio.py
scrapers/inputs/: pages_meta.json
scrapers/utils/: scraping_utils.py
scraping/: execute_scrapers.py
scraping/inputs/: pages_meta.json
scraping/scrapers/: scraper_CH_ethz.py  scraper_CH_unibas.py  scraper_CH_unibe.py  scraper_CH_unil.py  scraper_CH_uzh.py  scraper_NO_nmbu.py  scraper_NO_nord.py  scraper_NO_ntnu.py  scraper_NO_uib.py  scraper_NO_uio.py
scraping/scrapers/utils/: scraping_utils.py
scripts/: app.py  process.py  scrape.py
src/phdfinder/: config.py  streamlit_app.py
src/phdfinder/app/: streamlit_app.py  viewer.py
src/phdfinder/db/: process_db_tables.py  utils_processing.py
src/phdfinder/processing/: processor.py  utils.py
src/phdfinder/scraping/: execute_scrapers.py  runner.py  scraping_utils.py
src/phdfinder/scraping/scrapers/: scraper_CH_ethz.py  scraper_CH_unibas.py  scraper_CH_unibe.py  scraper_CH_unil.py  scraper_CH_uzh.py  scraper_NO_nmbu.py  scraper_NO_nord.py  scraper_NO_ntnu.py  scraper_NO_uib.py  scraper_NO_uio.py
src/phdfinder/scraping/scrapers/utils/: scraping_utils.py
src/phdfinder/scraping/universities/: ethz.py  nmbu.py  nord.py  ntnu.py  tum.py  uib.py  uio.py  unibas.py  unibe.py  unil.py  unilu.py  uzh.py
utils/: scraping_utils.py
