[project]
name = "phdfinder"
version = "0.1.0"
description = "CLI + Streamlit app to scrape and visualize PhD jobs"
authors = [
    {name = "Lukas Vasionis"}

]
packages = [
    { include = "phdfinder", from = "src" }
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "adagio (==0.2.6)",
    "altair (==5.4.1)",
    "appdirs (==1.4.4)",
    "attrs (==24.2.0)",
    "beautifulsoup4 (==4.12.3)",
    "blinker (==1.8.2)",
    "cachetools (==5.5.0)",
    "certifi (==2024.8.30)",
    "charset-normalizer (==3.3.2)",
    "click (==8.1.7)",
    "connectorx (==0.3.3)",
    "fs (==2.4.16)",
    "fsspec (==2024.9.0)",
    "fugue (==0.9.1)",
    "gitdb (==4.0.11)",
    "gitpython (==3.1.43)",
    "greenlet (==3.0.3)",
    "h11 (==0.14.0)",
    "idna (==3.8)",
    "importlib-metadata (==8.4.0)",
    "jinja2 (==3.1.4)",
    "jsonschema (==4.23.0)",
    "jsonschema-specifications (==2023.12.1)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==2.1.5)",
    "mdurl (==0.1.2)",
    "narwhals (==1.6.4)",
    "numpy (==2.1.1)",
    "ordered-set (==4.1.0)",
    "outcome (==1.3.0.post0)",
    "packaging (==24.1)",
    "pandas (==2.2.2)",
    "pillow (==10.4.0)",
    "polars (==1.6.0)",
    "protobuf (==5.28.0)",
    "pyarrow (==17.0.0)",
    "pydeck (==0.9.1)",
    "pyee (==11.1.1)",
    "pygments (==2.18.0)",
    "pyppeteer (==2.0.0)",
    "pysocks (==1.7.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "pytz (==2024.1)",
    "referencing (==0.35.1)",
    "regex (==2024.7.24)",
    "requests (==2.32.3)",
    "rich (==13.8.1)",
    "rpds-py (==0.20.0)",
    "selenium (==4.24.0)",
    "setuptools (==75.0.0)",
    "six (==1.16.0)",
    "smmap (==5.0.1)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "soupsieve (==2.6)",
    "sqlalchemy (==2.0.34)",
    "streamlit (==1.38.0)",
    "tenacity (==8.5.0)",
    "toml (==0.10.2)",
    "tornado (==6.4.1)",
    "tqdm (==4.66.5)",
    "triad (==0.9.8)",
    "trio (==0.26.2)",
    "trio-websocket (==0.11.1)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2024.1)",
    "urllib3 (==1.26.20)",
    "watchdog (==4.0.2)",
    "webdriver-manager (==4.0.2)",
    "websocket-client (==1.8.0)",
    "websockets (==10.4)",
    "wsproto (==1.2.0)",
    "zipp (==3.20.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"

[tool.poetry.scripts]
scrape = "scripts.scrape:main"
process = "scripts.process:main"